# gpt-oss-hackaton

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
docs/: API_DESIGN.md  ARCHITECTURE.md
gpt_oss_hackathon/: __init__.py  domain.py  ports.py  usecases.py
gpt_oss_hackathon/adapters/: fn_llm_adapter.py  fs_adapter.py  llm_adapter.py
scripts/: strip_comments.py
src/: cli_coder.py  cli_serve.py  cli_tools.py  container.py  exceptions.py  main.py
src/adapters/application/: local_application_launcher.py  local_application_resolver.py
src/adapters/files/: local_fs_adapter.py
src/adapters/llm/: openai_adapter.py  openai_tools_adapter.py
src/api/: dependencies.py  routers.py  schemas.py
src/config/: settings.py
src/entities/: Application.py  File.py  Llm.py
src/ports/application/: application_launcher_port.py  application_resolver_port.py
src/ports/files/: file_repository_port.py
src/ports/llm/: llm_port.py  tools_port.py
src/ui/: app.py  main_window.py  theme.py
src/ui/styles/: dark.qss  light.qss
src/use_cases/application/: open_application.py
src/use_cases/files/: list_files.py  search_files.py
src/use_cases/llm/: generate_text.py
src/use_cases/tools/: application_tools.py  decision_tree.py  files_tools.py  git_tools.py  project_tools.py  system_tools.py  web_tools.py
src/utils/: workspace.py
test/: index.html  script.js  style.css
tests/: __init__.py  conftest.py  test_ls_usecase.py
tests/adapters/files/: test_local_fs_adapter.py
tests/api/: __init__.py  test_routers.py
tests/entities/: test_file.py  test_llm.py
tests/use_cases/files/: test_list_files.py  test_search_files.py
