[project]
name = "gpt-oss-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "openai>=1.99.9",
    "pyside6>=6.9.2",
    "python-dotenv>=1.1.1",
    "typing-extensions>=4.7",
    "uvicorn[standard]>=0.30.6",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include the top-level Python package named "src" (project uses src/ layout with package name "src")
packages = ["src"]

[project.scripts]
# Serve the FastAPI app (env: HOST, PORT, RELOAD=1 for autoreload)
hack-serve = "src.cli_serve:main"
# Run a one-shot tools-enabled assistant and print JSON result
hack-tools = "src.cli_tools:main"
# Launch the desktop UI (Qt)
hack-ui = "src.ui.app:main"
# Interactive coder CLI (terminal)
hack-coder = "src.cli_coder:main"

[dependency-groups]
dev = [
    "basedpyright>=1.31.3",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.10",
]

[tool.uv]
dev-dependencies = []
